--- a/src/styles.scss
+++ b/src/styles.scss
@@ -57,13 +57,22 @@ button:disabled {
 }
 
 .link-container .title {
-  font-size: 24px;
+  font-size: 12px;
   font-weight: bold;
   margin-bottom: 10px;
 }
 
 .link-container .link {
-  font-size: 16px;
+  font-size: 8px;
+}
+
+.feed-list {
+  width: 300px;
+}
+
+.feed-list-title {
+  font-size: 20;
+  text-align: center;
 }
 
 @media only screen and (max-width: 600px) {
