--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,12 +14,13 @@ h1 {
 form {
   margin-top: 20px;
   text-align: center;
+  margin-bottom: 50px;
 }
 
 input[type="text"] {
   width: 300px;
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 2px solid #09023d;
   border-radius: 4px;
 }
 
@@ -30,43 +31,75 @@ input[type="text"].invalid {
 button[type="submit"] {
   margin: 30px;
   padding: 10px;
-  background-color: #007bff;
+  background-color: #032142;
   color: #fff;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  transition: transform 0.2s, box-shadow 0.2s;
 }
 
 button[type="submit"]:hover {
-  background-color: #0056b3;
+  background-color: #062a51;
+  transform: scale(1.05);
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.7);
+}
+
+button[type="submit"]:active {
+  transform: scale(0.95);
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.4);
 }
 
 button:disabled {
   opacity: 0.6;
   cursor: not-allowed;
   color: #ccc;
+  transition: none;
+  box-shadow: none;
+  transform: none;
+}
+
+button:disabled:hover {
+  transform: none;
+  box-shadow: none;
+  transition: none;
+}
+
+.right-conntainer {
+  float: right;
+  width: 200px; 
 }
 
 .link-container {
   background: linear-gradient(to bottom, #003366, #000044);
-  color: #fff;
-  padding: 20px;
+  color: #ffffff;
+  padding: 10px;
   margin: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);  
+  font-size: 12px;
+  text-align: justify;
+}
+
+.link-container:hover {
+  background: linear-gradient(to bottom, #637b93, #050544);
+  color: #fff;
+  border-radius: 10px;
+  border-color: black;
+  animation: myAnimation 0.5s;
 }
 
 .link-container .title {
-  font-size: 12px;
+  font-size: 16px;
   font-weight: bold;
   margin-bottom: 10px;
 }
 
-.link-container .link {
-  font-size: 8px;
-}
-
 .feed-list {
+  position: fixed;
+  top: 25%;
+  right: 0;
   width: 300px;
 }
 
@@ -81,3 +114,8 @@ button:disabled {
   }
 }
 
+@keyframes myAnimation {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.04); }
+  100% { transform: scale(1); }
+}
