--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,9 +9,20 @@ body {
 
 h1 {
   text-align: center;
+  position: fixed;
+  left: 30%;
+  margin-bottom: 20px;
+}
+
+.header:h1 {
+  position: fixed;
+  top: 0;
+  align-content: center;
 }
 
 form {
+  position: fixed;
+  left: 30%;
   margin-top: 20px;
   text-align: center;
   margin-bottom: 50px;
@@ -98,12 +109,45 @@ button:disabled:hover {
 
 .feed-list {
   position: fixed;
-  top: 25%;
+  top: 100px;
+  right: 10px;
+  width: 30%; 
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
   right: 0;
-  width: 300px;
+  top: 20%;
+}
+
+.feed-list .title {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 10px;
 }
 
 .feed-list-title {
+  font-size: 20;
+  text-align: center;
+}
+
+.entries-list {
+  position: fixed;
+  top: 20%;
+  left: 0;
+  width: 70%;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.entry-container {
+  flex: 1; /* Take only the necessary space on the right (no growth or shrink) */
+  width: 70%; /* Set a fixed width or use any other value as per your design */
+  padding: 10px;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+}
+
+.entry-title {
   font-size: 20;
   text-align: center;
 }
