--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,13 +3,13 @@
 body {
   font-family: Arial, sans-serif;
   margin: 0;
-  padding: 20px;
   background-color: rgb(243, 240, 237);
 }
 
 h1 {
   text-align: center;
   position: fixed;
+  margin: 20px;
   left: 30%;
   margin-bottom: 20px;
 }
@@ -22,8 +22,8 @@ h1 {
 
 form {
   position: fixed;
-  left: 30%;
-  margin-top: 20px;
+  left: 35%;
+  margin-top: 60px;
   text-align: center;
   margin-bottom: 50px;
 }
@@ -77,11 +77,6 @@ button:disabled:hover {
   transition: none;
 }
 
-.right-conntainer {
-  float: right;
-  width: 200px; 
-}
-
 .link-container {
   background: linear-gradient(to bottom, #003366, #000044);
   color: #ffffff;
@@ -109,20 +104,15 @@ button:disabled:hover {
 
 .feed-list {
   position: fixed;
-  top: 100px;
+  top: 25%;
   right: 10px;
   width: 30%; 
+  height: 100%;
+  overflow-y: auto;
   background-color: #f9f9f9;
-  border: 1px solid #ddd;
   right: 0;
-  top: 20%;
 }
 
-.feed-list .title {
-  font-size: 16px;
-  font-weight: bold;
-  margin-bottom: 10px;
-}
 
 .feed-list-title {
   font-size: 20;
@@ -131,25 +121,43 @@ button:disabled:hover {
 
 .entries-list {
   position: fixed;
-  top: 20%;
+  top: 25%;
   left: 0;
   width: 70%;
+  height: 100%;
   font-size: 16px;
   font-weight: bold;
   margin-bottom: 10px;
+  background-color: #f9f9f9;
+  overflow-y: auto;
+}
+
+.entries-list-title {
+  font-size: 20;
+  text-align: left;
 }
 
 .entry-container {
-  flex: 1; /* Take only the necessary space on the right (no growth or shrink) */
-  width: 70%; /* Set a fixed width or use any other value as per your design */
+  flex: 1; 
+  width: 100%; 
   padding: 10px;
   background-color: #f9f9f9;
   border: 1px solid #ddd;
+  overflow-y: auto;
 }
+
+#main-container {
+  padding: 20px;
+  width: 100%; 
+  height: 25%;
+  vertical-align: center;
+  background-color: #f9f9f9;
+}
+
 
 .entry-title {
   font-size: 20;
-  text-align: center;
+  text-align: left;
 }
 
 @media only screen and (max-width: 600px) {
