--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,22 +78,14 @@ button:disabled:hover {
 }
 
 .link-container {
-  background: linear-gradient(to bottom, #003366, #000044);
-  color: #ffffff;
+  margin: 30px;
   padding: 10px;
-  margin: 20px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);  
+  background-color: #032142;
+  color: #fff;
+  border: none;
+  border-radius: 8px;
   font-size: 12px;
   text-align: justify;
-}
-
-.link-container:hover {
-  background: linear-gradient(to bottom, #637b93, #050544);
-  color: #fff;
-  border-radius: 10px;
-  border-color: black;
-  animation: myAnimation 0.5s;
 }
 
 .link-container .title {
@@ -138,6 +130,9 @@ button:disabled:hover {
 }
 
 .entry-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   flex: 1; 
   width: 100%; 
   padding: 10px;
@@ -156,8 +151,62 @@ button:disabled:hover {
 
 
 .entry-title {
+  flex: 1; 
+  margin-right: 10px;
   font-size: 20;
   text-align: left;
+}
+
+.read-more-button {
+  margin: 5px; 
+  margin-right: 15px;
+  padding: 5px;
+  background-color: #032142;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.read-more-button:hover {
+  background-color: #062a51;
+  transform: scale(1.05);
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.7);
+}
+
+.modal-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  z-index: 9999; /* Ensure the modal appears on top of other content */
+}
+
+/* Styles for the modal content */
+.modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+}
+
+#popup-button {
+  background-color: #062a51;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 15px;
 }
 
 @media only screen and (max-width: 600px) {
