--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,6 @@ body {
 h1 {
   text-align: center;
   position: fixed;
-  margin: 20px;
   left: 30%;
   margin-bottom: 20px;
 }
@@ -20,12 +19,24 @@ h1 {
   align-content: center;
 }
 
+#example-message,
+#error-message {
+  font-size: 12px;
+  margin-top: 5px;
+  color: #666;
+  text-align: left;
+}
+
+#error-message {
+  color: #ff0000; 
+}
+
 form {
   position: fixed;
   left: 35%;
   margin-top: 60px;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
 }
 
 input[type="text"] {
@@ -96,7 +107,7 @@ button:disabled:hover {
 
 .feed-list {
   position: fixed;
-  top: 25%;
+  top: 30%;
   right: 10px;
   width: 30%; 
   height: 100%;
@@ -113,7 +124,7 @@ button:disabled:hover {
 
 .entries-list {
   position: fixed;
-  top: 25%;
+  top: 30%;
   left: 0;
   width: 70%;
   height: 100%;
@@ -144,7 +155,7 @@ button:disabled:hover {
 #main-container {
   padding: 20px;
   width: 100%; 
-  height: 25%;
+  height: 30%;
   vertical-align: center;
   background-color: #f9f9f9;
 }
