--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 body {
   font-family: Arial, sans-serif;
   margin: 0;
-  background-color: rgb(243, 240, 237);
+  background-color: #fbf0ea;
 }
 
 h1 {
@@ -14,6 +14,7 @@ h1 {
 }
 
 .header:h1 {
+  width: 100%;
   position: fixed;
   top: 0;
   align-content: center;
@@ -107,49 +108,51 @@ button:disabled:hover {
 
 .feed-list {
   position: fixed;
-  top: 30%;
+  top: 33%;
   right: 10px;
   width: 30%; 
   height: 100%;
   overflow-y: auto;
-  background-color: #f9f9f9;
   right: 0;
 }
 
 
 .feed-list-title {
-  font-size: 20;
+  font-size: 25px;
   text-align: center;
+  margin-bottom: 3%;
 }
 
 .entries-list {
   position: fixed;
-  top: 30%;
+  top: 33%;
   left: 0;
   width: 70%;
   height: 100%;
   font-size: 16px;
   font-weight: bold;
   margin-bottom: 10px;
-  background-color: #f9f9f9;
   overflow-y: auto;
 }
 
 .entries-list-title {
-  font-size: 20;
-  text-align: left;
+  font-size: 25px;
+  text-align: center;
+  left: 10%;
+  margin-bottom: 3%;
 }
 
 .entry-container {
+  margin: 5px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex: 1; 
-  width: 100%; 
-  padding: 10px;
-  background-color: #f9f9f9;
-  border: 1px solid #ddd;
+  width: 98%; 
+  padding: 5px;
+  border: 2px solid #7b695e;
   overflow-y: auto;
+  border-radius: 8px;
 }
 
 #main-container {
@@ -157,7 +160,8 @@ button:disabled:hover {
   width: 100%; 
   height: 30%;
   vertical-align: center;
-  background-color: #f9f9f9;
+  background: linear-gradient(135deg, #FFDAB9, #BC8F8F);
+  border-bottom: solid #032142;
 }
 
 
@@ -175,7 +179,7 @@ button:disabled:hover {
   background-color: #032142;
   color: #fff;
   border: none;
-  border-radius: 4px;
+  border-radius: 6px;
   cursor: pointer;
 }
 
@@ -192,11 +196,10 @@ button:disabled:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-  z-index: 9999; /* Ensure the modal appears on top of other content */
+  background-color: rgba(0, 0, 0, 0.5); 
+  z-index: 9999; 
 }
 
-/* Styles for the modal content */
 .modal-content {
   position: absolute;
   top: 50%;
@@ -218,6 +221,20 @@ button:disabled:hover {
   cursor: pointer;
   font-size: 16px;
   margin-top: 15px;
+}
+
+a {
+  color: #995f4f;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+a:hover {
+  color: #e74c3c;
+}
+
+a:visited {
+  color: #9b59b6;
 }
 
 @media only screen and (max-width: 600px) {
