--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,6 +32,13 @@ h1 {
   color: #ff0000; 
 }
 
+#success-message {
+  font-size: 12px;
+  margin-top: 5px;
+  color: #666;
+  text-align: left;
+}
+
 form {
   position: fixed;
   left: 35%;
