--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,12 +15,12 @@ body {
   color: #49535d;
 }
 
-input[type="text"] {
+input[id="url-input"] {
   border: 2px solid #09023d;
   border-radius: 4px;
 }
 
-input[type="text"].invalid {
+input[id="url-input"].invalid {
   border-color: red;
 }
 
@@ -90,8 +90,6 @@ button[type="submit"]:disabled:hover {
 }
 
 .read-more-button {
-  height: 5vh;
-  padding: 15%;
   background-color: #032142;
   color: #fff;
   border: none;
