--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,10 @@ body {
   color: #49535d;
 }
 
+#error-message {
+  color: #725650;
+}
+
 input[id="url-input"] {
   border: 2px solid #09023d;
   border-radius: 4px;
